# tlgs

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  Package.cmake  README.md
diesgn_docs/: misc.md
systemd/: tlgs.conf  tlgs_crawler.service  tlgs_crawler.timer  tlgs_server.service
tlgs/: CMakeLists.txt  config.json  server_config.json
tlgs/crawler/: CMakeLists.txt  blacklist.cpp  blacklist.hpp  crawler.cpp  crawler.hpp  iconv.hpp  main.cpp  pch.h
tlgs/server/: CMakeLists.txt  main.cpp  search_result.hpp
tlgs/server/contents/: robots.txt
tlgs/server/contents/.well-known/: security.txt
tlgs/server/controllers/: api.cpp  search.cpp  tools.cpp
tlgs/server/templates/: about.csp  backlinks.csp  doc_api.csp  doc_backlinks.csp  doc_indexing.csp  doc_search.csp  header.csp  homepage.csp  known_hosts.csp  news.csp  search_result.csp  statistics.csp
tlgs/tlgs_ctl/: CMakeLists.txt  main.cpp
tlgsutils/: CMakeLists.txt  counter.hpp  gemini_parser.cpp  gemini_parser.hpp  robots_txt_parser.cpp  robots_txt_parser.hpp  trie.hpp  url_blacklist.hpp  url_parser.cpp  url_parser.hpp  utils.cpp  utils.hpp
tlgsutils/tests/: gemini_parser_test.cpp  main.cpp  pch.hpp  robots_txt_parser_test.cpp  trie_test.cpp  url_blacklist_test.cpp  url_parser_test.cpp  utils_test.cpp
