add_executable(tlgs_crawler main.cpp blacklist.cpp crawler.cpp)
find_package(Drogon REQUIRED)
find_package(Iconv REQUIRED)
target_link_libraries(tlgs_crawler PRIVATE Drogon::Drogon Iconv::Iconv dremini tlgsutils tbb)
target_precompile_headers(tlgs_crawler PRIVATE pch.h)
install(TARGETS tlgs_crawler RUNTIME DESTINATION bin)